Fix: fix to overflow scroll

--- a/src/main/Main.css
+++ b/src/main/Main.css
@@ -1,4 +1,5 @@
 .main {
   flex-grow: 1;
   background-color: var(--secondary-color);
+  overflow-y: scroll;
 }
